# onrobot_2FG7_gripper_description

./: CMakeLists.txt  README.md  package.xml
2FG7_inwards_description/: CMakeLists.txt  package.xml
2FG7_inwards_description/launch/: controller.yaml  gazebo.launch
2FG7_inwards_description/meshes/: base_link.stl
2FG7_inwards_description/urdf/: 2FG7_inwards.xacro  materials.xacro
2FG7_outwards_description/: package.xml
2FG7_outwards_description/launch/: controller.launch  display.launch  gazebo.launch  gazebo_control.launch  urdf.rviz
2FG7_outwards_description/urdf/: 2FG7_outwards.gazebo  2FG7_outwards.trans  2FG7_outwards.trans.xacro  2FG7_outwards.xacro  2FG7_outwards_upload.xacro  gzplugin_grasp_fix.urdf.xacro  mimic_fix.urdf.xacro
config/: controller.yaml
launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  gazebo_control.launch  urdf.rviz
meshes/: base_link.stl  core_1.stl  left_finger_v1_1.stl  right_finger_v1_1.stl  top_1.stl
onrobot_2FG7_inwards__gripper_description/launch/: controller.launch  display.launch
onrobot_2FG7_inwards__gripper_description/meshes/: base_link.stl  left_finger_v1_1.stl  right_finger_v1_1.stl
onrobot_2FG7_inwards__gripper_description/urdf/: 2FG7_inwards.gazebo  2FG7_inwards.trans  2FG7_inwards.xacro
onrobot_2FG7_outwards_gripper_description/: CMakeLists.txt  package.xml
urdf/: 2FG7_outwards.gazebo  2FG7_outwards.xacro  2FG7_v1.gazebo  2FG7_v1.trans  2FG7_v1.xacro  gzplugin_grasp_fix.urdf.xacro  materials.xacro  onrobot_2fg7.gazebo  onrobot_2fg7.xacro  onrobot_2fg7_upload.xacro
(+6 files in other folders)
