<?xml version="1.0"?>
<package format="2">
  <name>onrobot_2fg7_description</name>
  <version>0.0.0</version>
<description>The onrobot_2fg7_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="juan97pena@gmail.com">Juan Diego</maintainer>



  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>gazebo_grasp_plugin</depend>
  <depend>roboticsgroup_upatras_gazebo_plugins</depend>




</package>
